# anchor-interface

./: Anchor.toml  Cargo.toml  custom_build.rs  package.json  rust-toolchain.toml
programs/empty-implementation/: Cargo.toml
programs/empty-implementation/src/: instructions.rs  lib.rs
programs/implementation-0/: Cargo.toml
programs/implementation-0/src/: lib.rs
programs/implementation-1/: Cargo.toml
programs/implementation-1/src/: lib.rs
programs/invocation/: Cargo.toml
programs/invocation/src/: interface_instuction.rs  lib.rs  primitives.rs
tests/: invoke-implementation.js
